--- a/assets/scss/_comp/_comp.scss
+++ b/assets/scss/_comp/_comp.scss
@@ -13,36 +13,41 @@
 @import "back-to-top";
 
 .breadcrumb {
-    font-size: 80%;
+  font-size: 80%;
 }
-
-
 
 //body {
 //    background: rgba( $primary, .04 );
 //}
 
 .xcateg-nav {
-    @extend %dev;
+  @extend %dev;
 }
 
 .homeContent {
-    > *:nth-child(n+2) {
-        @extend .px-4;
-        max-width: 60rem;
-        margin-left: auto ;
-        margin-right: auto ;
-        //@extend %dev;
-    }
-    > ul:nth-child(n+2) {
-        padding-left: 1rem;
-    }
+  > *:nth-child(n + 2) {
+    @extend .px-4;
+    max-width: 60rem;
+    margin-left: auto;
+    margin-right: auto;
+    //@extend %dev;
+  }
+  > ul:nth-child(n + 2) {
+    padding-left: 1rem;
+  }
 }
 
 .card-single {
-    //@extend %dev;
-    @extend .pt-3;
-    @extend %shadow;
-    background: white;
-    border-radius: 5px;
+  //@extend %dev;
+  @extend .pt-3;
+  @extend %shadow;
+  background: white;
+  border-radius: 5px;
+}
+
+.icon_square {
+  display: block;
+  aspect-ratio: 1/1;
+  width: 1.8rem;
+  margin-top: 0.2rem;
 }
