--- a/layouts/partials/term.html
+++ b/layouts/partials/term.html
@@ -98,7 +98,7 @@
 
                 <div class="flex-grow-1">
                   <h4 class="h5 entry-card--title mb-0">
-                    <a href="" x-text="entry.titleClard"> </a>
+                    <a :href="entry.relPermalink" x-text="entry.titleClard"> </a>
                   </h4>
 
                   <i class="entry-card--jobTitle" x-text="entry.subtitle"> </i>
