--- a/layouts/_default/term.html
+++ b/layouts/_default/term.html
@@ -7,7 +7,7 @@
 
 
 
-	{{ partial "partials/term.html" . }}
+	{{ partial "term.html" . }}
 	
 
 	
@@ -85,7 +85,7 @@
 	
 {{ end }}
 
-{{ define "partials/country-name-ISO-3166-ALPHA-2" }}
+{{ define "country-name-ISO-3166-ALPHA-2" }}
 	{{ $scratch := newScratch }}
 
 	{{ if eq . "AF"}}
