fix bi/poly mixup

--- a/layouts/partials/term.html
+++ b/layouts/partials/term.html
@@ -17,7 +17,7 @@
           <p>
             Click on your state / province / country below. If your state /
             province / country isn't listed, then we don't yet have any
-            polyamory-friendly professionals listed there in this category.
+            bisexuality-aware professionals listed there in this category.
           </p>
         </div>
       </div>
