--- a/layouts/partials/term.html
+++ b/layouts/partials/term.html
@@ -16,8 +16,9 @@
           <h1>{{ .Title }}</h1>
           <p>
             Click on your state / province / country below. If your state /
-            province / country isn't listed, then we don't yet have any
-            bisexuality-aware professionals listed there in this category.
+            province / country isn't listed, then we don't yet have any {{
+            .Site.Params.termCopy }} professionals listed there in this
+            category.
           </p>
         </div>
       </div>
